js/src/tests/test262/built-ins/Error/isError/bigints.js
assert
.
sameValue
(
Error
.
isError
(
0n
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
42n
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
BigInt
(
0
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
BigInt
(
42
)
)
false
)
;
reportCompare
(
0
0
)
;
